fix: correct alignment on modal footer buttons

--- a/webroot/css/less/_overrides.less
+++ b/webroot/css/less/_overrides.less
@@ -65,3 +65,7 @@ a {
         margin: 0 auto;
     }
 }
+
+.modal-footer .btn {
+    margin-bottom: 0;
+}
